--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+
 <!doctype html>
 <html lang="es">
 <head>
@@ -9,22 +10,27 @@
     {% block title %}{% endblock %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Rubik+Bubbles&display=swap" rel="stylesheet">
     <link href="{% static '/css/main.css' %}" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
-        <a class="navbar-titulo navbar-elemento" href="/">Lupop</a>
+        <a class="navbar-titulo navbar-elemento" href="{% url 'home' %}">Lupop</a>
         <ul class="navbar-links">
             <a class="navbar-links-item" href="/munecos/">Muñecos</a>
             <a class="navbar-links-item" href="/ropa/">Ropa</a>
             <a class="navbar-links-item" href="/mini_mi/">Mini-Mi</a>
             <a class="navbar-links-item" href="/desde_cero/">Desde cero</a>
+            <a class="navbar-links-item" href="/productos/">Productos</a>
         </ul>
-        <a class="navbar-usuario navbar-elemento" href="/inicio_sesion/">Usuario</a>
+        {% if user.is_authenticated %}
+            <a class="navbar-usuario navbar-elemento" href="/usuario_info/">{{ user.username }}</a>
+        {% else %}
+            <a class="navbar-usuario navbar-elemento" href="{% url 'login' %}">Iniciar Sesión</a>
+        {% endif %}
     </nav>
 
-    <div class="">
+    <div class="contenido">
         {% block body %}
         {% endblock %}
     </div>
