--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,7 +24,7 @@
     width: 10px;
 }
 ::-webkit-scrollbar-track {
-    background-color: var(--color-durazno);
+    background-color: var(--color-polvo-azul);
 }
 ::-webkit-scrollbar-thumb {
     /* Estilo del handle */
@@ -33,7 +33,7 @@
 }
 /* Estilo al hacer hover */
 ::-webkit-scrollbar-track:hover {
-    background-color: var(--color-gris);
+    background-color: var(--color-polvo-azul);
 }
 ::-webkit-scrollbar-thumb:hover {
     background-color: var(--color-rojo-opaco);
@@ -138,10 +138,25 @@ a:hover{
 
 /* INICIO diseño responsive navbar */
 
-@media screen and (max-width: 710px) {
+@media screen and (max-width: 820px) {
     .navbar-links{
         display: none;
     }
 }
 
 /* FIN diseño responsive navbar */
+
+
+
+/* INICIO diseño formularios */
+
+.contenido{
+    display: flex;
+    padding-top: var(--altura-nav-bar);
+    width: 100%;
+    height: 100%;
+
+    background-color: var(--color-durazno);
+}
+
+/* FIN diseño formularios */
