--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -2,8 +2,10 @@
 {% block title %}
 <title>LUPOP</title>
 {% endblock %}
-
-
 {% block body %}
-<!-- aqui añadir el contenido -->
+<div class="contenido fondo-amarillo">
+    <div class="articulo-index">
+
+    </div>
+</div>
 {% endblock %}
