--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,19 +2,24 @@
 :root {
     /* Se definen variables de colores */
     --color-nav-bar: rgb(44,41,41);
+    --color-rosa: rgb(171, 105, 88);
     --color-durazno: rgb(252, 220, 212);
     --color-polvo-azul: rgb(196, 212, 212);
     --color-grafito: rgb(67, 65, 78);
 
+    --color-negro: rgb(0,0,0);
     --color-blanco: rgb(255,255,255);
-    --color-rojo: rgb(211,110,92);
-    --color-rojo-opaco: rgb(140, 73, 61);
+    --color-verde: rgb(113, 254, 162);
+    --color-verde-opaco: rgb(68, 183, 110);
+    --color-amarillo: rgb(231, 221, 75);
+    --color-amarillo-opaco: rgb(134, 127, 0);
+    --color-rojo: rgb(231, 75, 75);
+    --color-rojo-opaco: rgb(138, 46, 46);
     --color-gris: rgb(47,38,39);
     --color-gris-opaco: rgb(38, 26, 27);
 
     /* Se definen variables tamanos */
     --altura-nav-bar: 4rem;
-    --altura-main-secciones: 2.6rem;
     --tamano-letra: 1rem;
 }
 
@@ -28,8 +33,8 @@
 }
 ::-webkit-scrollbar-thumb {
     /* Estilo del handle */
-    background-color: var(--color-rojo);
-    border-radius: 2px;
+    background-color: var(--color-rosa);
+    border-radius: 3px;
 }
 /* Estilo al hacer hover */
 ::-webkit-scrollbar-track:hover {
@@ -40,12 +45,11 @@
 }
 
 body{
+    overflow-x: hidden;
     /* Ajustes generales de body */
     margin: 0;
     background-color: var(--color-blanco);
     font-family: 'Roboto', sans-serif;
-    height: calc(100%);
-    margin-bottom: calc(var(--altura-nav-bar));
 }
 
 a{
@@ -60,6 +64,11 @@ a:hover{
     background-color: rgba(0, 0, 0, 0.6);
     transition: 200ms;
 }
+.fondo-amarillo{
+    background-color: var(--color-amarillo);
+}
+
+
 /* FIN de configuraciones generales */
 
 
@@ -69,6 +78,14 @@ a:hover{
 /* INICIO de configuraciones de navbar */
 
 /* Configuraciones de navbar */
+.logo-img-footer{
+    width: 60%;
+}
+.logo-img{
+    height: 100%;
+    width: 100%;
+    transform: scale(0.9);
+}
 .navbar{
     position: fixed;
     top: 0;
@@ -133,9 +150,6 @@ a:hover{
 /* FIN de configuraciones de navbar */
 
 
-
-
-
 /* INICIO diseño responsive navbar */
 
 @media screen and (max-width: 820px) {
@@ -148,15 +162,218 @@ a:hover{
 
 
 
+
+/* INICIO diseño footer */
+
+.footer-container{
+    color: var(--color-blanco);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color: var(--color-grafito);
+    width: 100%;
+}
+.footer-redes{
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+}
+
+.footer-bottom{
+    font-size: calc(var(--tamano-letra) / 1.2);
+    margin-top: 10px;
+    text-align: center;
+    line-height: calc((var(--altura-nav-bar) / 1.5) / 2);
+    width: 100%;
+    height: calc(var(--altura-nav-bar) / 1.5);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.footer-section{
+    display: flex;
+    width: 100vw;
+}
+
+.footer-section-img{
+    display: flex;
+    width: 40%;
+    justify-content: center;
+    padding: 40px 0;
+}
+
+.footer-section-leyenda{
+    width: 60%;
+}
+
+.links-redes{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 3px;
+    width: 45px;
+    height: 45px;
+}
+
+.item-red-social{
+    font-size: 30px;
+    color: var(--color-blanco);
+}
+.links-redes:hover > .item-red-social{
+    color: var(--color-negro);
+}
+.links-redes:hover{
+    background-color: rgba(255, 255, 255, 0.8);
+    transform: scale(1.2);
+}
+
+
+
+/* FIN diseño footer */
+
+
+
+
+
 /* INICIO diseño formularios */
 
 .contenido{
     display: flex;
-    padding-top: var(--altura-nav-bar);
-    width: 100%;
-    height: 100%;
-
-    background-color: var(--color-durazno);
+    justify-content: center;
+    margin-top: var(--altura-nav-bar);
+    min-height: calc(100vh - var(--altura-nav-bar));
+    height: fit-content;
 }
 
+.contenido-login {
+    background-image: url('../img/pokemon.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.contenido-registro {
+    background-image: url('../img/oruga.jpg');
+    background-size: cover;
+    background-position: center;
+}
+
+.marco-form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 60%;
+    border-radius: 10px;
+    margin: 40px 0;
+}
+
+.texto-registro{
+    font-size: calc(var(--tamano-letra) * 1.4);
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    letter-spacing: 2px;
+    height: calc(var(--tamano-letra) * 4);
+    align-items: center;
+    color: var(--color-blanco)
+}
+.texto-registro:hover{
+    color: var(--color-blanco);
+}
+
+.form-container{
+    color: var(--color-blanco);
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.form-campos{
+    width: 100%;
+    margin: 10px 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.form-elemento{
+    margin: 5px 0;
+    display: flex;
+    width: 70%;
+    font-size: 20px;
+}
+
+.form-titulo{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    font-size: calc(var(--tamano-letra) * 2.5);
+    font-weight: bolder;
+    margin-top: 40px;
+    width: 100%;
+}
+
+.form-input{
+    display: inline-block;
+    border: 2px solid rgba(0, 0, 0, 0.4);
+    outline: none;
+    height: 40px;
+    width: 100%;
+    border-radius: 10px;
+    padding: 0 10px;
+    font-size: calc(var(--tamano-letra));
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+
+.boton{
+    display: flex;
+    background-color: var(--color-blanco);
+    border-radius: 2px;
+    border-color: var(--color-negro);
+    border-style: solid;
+    border-radius: 10px;
+    font-weight: bolder;
+    padding: 10px;
+    margin: 30px 0 60px 0;
+    font-size: calc(var(--tamano-letra) * 1.5);
+    transition: 0.5s;
+}
+
+.boton:hover {
+    background-color: var(--color-gris);
+    color: var(--color-blanco);
+    transition: 0.5s;
+    cursor: pointer;
+}
+
+
 /* FIN diseño formularios */
+
+/* INICIO diseño info usuario */
+
+.aside-izquierdo-info-usuario{
+    display: block;
+    width: 18rem;
+    font-size: calc(var(--tamano-letra) * 1.5);
+    background-color: var(--color-verde-opaco);
+    overflow: hidden;
+}
+
+.aside-izquierdo-info-usuario-link{
+    display: inline-block;
+    color: var(--color-blanco);
+    width: 100%;
+    height: 60px;
+    padding-left: 10px;
+
+    line-height: 60px;
+}
+
+.articulo-info-usuario{
+    width: calc(90% - 18rem);
+    padding: 0 5%;
+}
+
+/* FIN diseño info usuario */
