--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,5 +1,3 @@
-{% load static %}
-
 <!doctype html>
 <html lang="es">
 <head>
@@ -7,15 +5,18 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    {% load static %}
     {% block title %}{% endblock %}
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Rubik+Bubbles&display=swap" rel="stylesheet">
     <link href="{% static '/css/main.css' %}" rel="stylesheet">
+    <link rel="icon" href="{% static '/img/caralupop.ico' %}" type="image/x-icon">
+    <script src="https://kit.fontawesome.com/c83cadcdce.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar">
-        <a class="navbar-titulo navbar-elemento" href="{% url 'home' %}">Lupop</a>
+        <a class="navbar-titulo navbar-elemento" href="{% url 'home' %}"><img class="logo-img" src="{% static '/img/logolupop.png' %}"></a>
         <ul class="navbar-links">
             <a class="navbar-links-item" href="/munecos/">Muñecos</a>
             <a class="navbar-links-item" href="/ropa/">Ropa</a>
@@ -24,15 +25,36 @@
             <a class="navbar-links-item" href="/productos/">Productos</a>
         </ul>
         {% if user.is_authenticated %}
-            <a class="navbar-usuario navbar-elemento" href="/usuario_info/">{{ user.username }}</a>
+            <a class="navbar-usuario navbar-elemento" href="{% url 'usuario_info' %}">{{ user.username }}</a>
         {% else %}
             <a class="navbar-usuario navbar-elemento" href="{% url 'login' %}">Iniciar Sesión</a>
         {% endif %}
     </nav>
-
-    <div class="contenido">
-        {% block body %}
-        {% endblock %}
-    </div>
+    {% block body %}
+    {% endblock %}
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section">
+                <div class="footer-section-img">
+                    <img class="logo-img-footer" src="{% static '/img/logolupop.png' %}">
+                </div>
+                <div class="footer-section-leyenda">
+                    <h4>LUPOP</h4>
+                    <p>Felicidad ilimitada para ti y tus seres queridos</p>
+                    <p>No olvides seguirnos en nuestras redes sociales</p>
+                </div>
+            </div>
+            <div class="footer-redes">
+                <a title="Mandanos un Correo" href="https://www.facebook.com/tupagina" target="_blank" class="links-redes"><i class="fa-regular fa-envelope item-red-social"></i></a>
+                <a title="Siguenos en Facebook" href="https://www.facebook.com/tupagina" target="_blank" class="links-redes"><i class="fa-brands fa-facebook-f item-red-social"></i></a>
+                <a title="Siguenos en Instagram" href="https://www.facebook.com/tupagina" target="_blank" class="links-redes"><i class="fa-brands fa-instagram item-red-social"></i></i></a>
+                <a title="Siguenos en X / Twitter" href="https://www.facebook.com/tupagina" target="_blank" class="links-redes"><i class="fa-brands fa-x-twitter item-red-social"></i></a>
+                <a title="Siguenos en Tiktok" href="https://www.facebook.com/tupagina" target="_blank" class="links-redes"><i class="fa-brands fa-tiktok item-red-social"></i></a>
+            </div>
+            <div class="footer-bottom">
+                <p class="footer-bottom-texto">Todos los derechos reservados ®LUPOP</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
